assets/css/style.css
*{
    margin: 0;
    padding: 0;
    border: 0;
}

body{
    font-family: 'Lato', sans-serif;
    font-family: 'Roboto', sans-serif;
    color: #262121;
    background-color: #f7d4a6;;
    font-size: 100%;
}

/*Styling the logo and navigation links*/

/*logo image*/
#logo{
    float:left;
    margin-top:5px;
    margin-left:10px;
    margin-bottom: 5px;
    width:70px;
    border-radius: 50px;
}

#menu a{
    padding-right: 25px;
}

/*navigation links*/
#menu{
    font-size: 125%;
    font-weight: 500;
    letter-spacing: 1px;
    float: right;
    margin-top: 15px;
    margin-right: 60px;
}

#logo, #menu {
    line-height: 50px;
}

#menu a {
    text-decoration: none;
    color: #262121;
}

#menu a:hover {
    border-bottom: 1px solid #262121;
    border: 1px solid black;
    border-radius: 10px;
    padding: 5px;
    cursor: hand;
}

/*Styling hero section*/

#hero-outer{
    position: relative;
}

#hero{
    width: 100%;
}

#cover-text{
    text-align: left;
    position: absolute;
    top: 60%;
    left: 25%;
    transform: translate(-40%, -50%);
    padding-left: 15px;
    padding-right: 200px;
    font-size: 1.5vw;
    font-weight: 900;
    letter-spacing: 2px;
}

h2{
    font-family: 'Roboto', sans-serif;
    padding: 5px;
}

ul{
    list-style-type: none;
}

.button{
    font-family: 'Lato',sans-serif;
    font-size: 1vw;
    font-weight: 500;
    text-align: center;
    background-color: #beb5d2;
    padding: 8px;
    border:1px solid #262121;
    border-radius: 10px;
    margin: 10px 0;
    
}

.button:hover{
    background-color: #f2800a;
    transition: 0.7s;
    cursor: pointer;
}

h2~ul {
    padding-top: 40px;
}

